# EarlyAlgorithm

./: CMakeLists.txt  EarlyParser.h  README.md  Readme.md  main.cpp  test.cpp
.github/workflows/: cmake_tests.yml
include/: EarleyParser.h  Grammar.h  InputPolicy.h  ParserAlgo.h
src/: CMakeLists.txt  EarleyParser.cpp  Grammar.cpp  InputPolicy.cpp  ParserAlgo.cpp
tests/: CMakeLists.txt  earley_tests.cpp  grammar_test.cpp
tests/input_tests/: test1  test2  test3  word_input
